# notion-client

./: CHANGELOG.md  Cargo.toml  README.md
examples/todo/: main.rs
examples/todo/commands/: configure.rs
